网页设计技能训练

--- a/hot.html
+++ b/hot.html
@@ -19,7 +19,7 @@
 	<div class="full">
 			<div class="menu">
 				<ul>
-					<li><a href="home.html">主页</a></li>
+					<li><a href="index.html">主页</a></li>
 					<li><a href="showing.html">正在热映</a></li>
 					<li><a href="foreshow.html">即将上映</a></li>
 					<li><a class="active" href="hot.html">热门电影</a></li>
@@ -31,7 +31,7 @@
 		<div class="review-content">
 			<div class="top-header span_top">
 				<div class="logo">
-					<a href="home.html"><img src="images/logo.png" alt="" /></a>
+					<a href="index.html"><img src="images/logo.png" alt="" /></a>
 					<p>豆瓣电影</p>
 				</div>
 				<div class="search v-search">
