--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div class="full">
 			<div class="menu">
 				<ul>
-					<li><a class="active" href="home.html">主页</a></li>
+					<li><a class="active" href="index.html">主页</a></li>
 					<li><a href="showing.html">正在热映</a></li>
 					<li><a href="foreshow.html">即将上映</a></li>
 					<li><a href="hot.html">热门电影</a></li>
@@ -30,7 +30,7 @@
 		<div class="header">
 			<div class="top-header">
 				<div class="logo">
-					<a href="主页.html"><img src="images/logo.png" alt="" /></a>
+					<a href="index.html"><img src="images/logo.png" alt="" /></a>
 					<p>豆瓣电影</p>
 				</div>
 				<div class="search">
