--- a/showing.html
+++ b/showing.html
@@ -19,15 +19,16 @@
 	<div class="full">
 			<div class="menu">
 				<ul>
-					<li><a href="home.html">主页</a></li>
+					<li><a href="index.html">主页</a></li>
 					<li><a class="active" href="showing.html">正在热映</a></li>
 					<li><a href="foreshow.html">即将上映</a></li>
 					<li><a href="hot.html">热门电影</a></li>
 					
 				</ul>
 			</div>
+
 		<div class="main">
-		<div class="video-content">
+		<div class="review-content">
 			<div class="top-header span_top">
 				<div class="logo">
 					<a href="index.html"><img src="images/logo.png" alt="" /></a>
