--- a/foreshow.html
+++ b/foreshow.html
@@ -19,7 +19,7 @@
 	<div class="full">
 			<div class="menu">
 				<ul>
-					<li><a href="home.html">主页</a></li>
+					<li><a href="index.html">主页</a></li>
 					<li><a href="showing.html">正在热映</a></li>
 					<li><a class="active" href="foreshow.html">即将上映</a></li>
 					<li><a href="hot.html">热门电影</a></li>
